fix: update css on smaller device

--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -66,6 +66,8 @@ header nav li{
 
 nav li a {
   text-decoration: none;
+  text-align: center;
+  width: auto;
   color: rgb(91, 91, 91);
 }
 
@@ -105,6 +107,10 @@ nav li a:hover {
 }
 
 @media screen and (max-width: 460px){
+  header {
+    height: auto;
+  }
+
   header .logo p {
     padding: 0;
     text-align: center;
@@ -113,6 +119,16 @@ nav li a:hover {
   header .logo a {
     display: none;
   }
+
+  header nav ul {
+    gap: .5rem;
+  }
+
+  header nav li {
+    margin-top: 1rem;
+    padding: 2px 0px 1rem 0px;
+  }
+
 }
 
 
